--- a/app/analytics.html
+++ b/app/analytics.html
@@ -6,4 +6,8 @@
   gtag('js', new Date());
 
   gtag('config', '{{ ID }}');
+  
+  $(document).on('click', '#asNavbar a', (event) => {
+    gtag('config', '{{ ID }}', {'page_path': event.target.innerText})
+  })
 </script>
